error2.log
file:///C:/Users/Hardik%20Rokde/Downloads/AMD-Slingshot-AI-Day-Workshop-1/server.js:140
    console.log(\`Server is running on port \${PORT}\`);
                ^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:437:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:484:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v22.13.0
